some changes to the base routes

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,8 @@
+@import "Sass/abstract/variables";
+
 @import "Sass/base/base";
 @import "src/Sass/base/typography";
 
 @import "Sass/layout/homePage";
 
+@import "Sass/components/link";
