vedio two is done

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,5 @@
 @import "Sass/layout/homePage";
 
 @import "Sass/components/link";
+@import "Sass/components/homePage";
+@import "Sass/components/exampleLayout";
