home page is almost done

--- a/src/Sass/base/_typography.scss
+++ b/src/Sass/base/_typography.scss
@@ -5,3 +5,13 @@
 .h-2{
   font-size: 1.8rem;
 }
+
+.header {
+  font-size: 5rem;
+  font-weight: bold;
+  color: transparent;
+  background-image: linear-gradient(to right bottom, #ff000f, #f911bf);
+  -webkit-background-clip: text;
+
+
+}
