--- a/src/Sass/components/_link.scss
+++ b/src/Sass/components/_link.scss
@@ -3,6 +3,7 @@
   text-decoration: none;
   color: $color-font-black;
   transition: all 0.3s;
+  border-bottom: 1px solid black;
 
   &:hover{
     color:$color-font-black-light-1;
