--- a/src/Sass/components/_exampleLayout.scss
+++ b/src/Sass/components/_exampleLayout.scss
@@ -1,3 +1,7 @@
+$color-gray-light-1:#f7f7f7;
 .example-layout{
 
+  margin: 1rem;
+  background:$color-gray-light-1 ;
+  box-shadow: 0 1rem 3rem rgba($color-font-black,.2);
 }
