--- a/src/Sass/components/_link.scss
+++ b/src/Sass/components/_link.scss
@@ -4,11 +4,13 @@
   color: $color-font-black;
   transition: all 0.3s;
   border-bottom: 1px solid black;
+  display: block;
+  margin-bottom: 1rem;
 
   &:hover{
     color:$color-font-black-light-1;
     cursor: pointer;
-    transform:scale(1.5);
+    transform:scale(1.2);
 
   }
 }
