--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import "Sass/abstract/variables";
+@import "Sass/base/util";
 
 @import "Sass/base/base";
 @import "src/Sass/base/typography";
